tests/typechecking/valid/simple_array.ml
let z = Array.create 10 1 in 9