tests/typechecking/invalid/Array_get_bad_syntax.ml
let v1= Array.create 3 1 in v1.(1.6)